# OpenGL_Learn

./: .gitignore
project_openGL/: CMakeLists.txt  project_openGL.sln
project_openGL/Debug/: project_openGL.ilk
project_openGL/Include/: glCommonClass.h
project_openGL/Include/glad/: glad.h
project_openGL/Lib/Windows/: glfw3.lib
project_openGL/LibSrc/: CMakeLists.txt
project_openGL/Src/: tutorial1.cpp
project_openGL/project_openGL/: glad.cpp  project_openGL.vcxproj  project_openGL.vcxproj.filters  tutorial1.cpp
project_openGL/project_openGL/Debug/: vc141.idb
project_openGL/project_openGL/Debug/project_openGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  project_openGL.lastbuildstate
